--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     width: 100vw;
     height: 100vh;
+    font-size: 17px;
 }
 nav {
     display: flex;
@@ -70,4 +71,178 @@ article {
 }
 .daily-links-container {
     padding-right: 5vw;
+}
+.cover-container {
+    position: relative;
+    margin-top: 70px;
+    width: 100%;
+}
+#play-button {
+    width: 65px;
+    height: 65px;
+    background: url("./images/bandcamp/play-icon.png") white no-repeat;
+    background-size: 100%;
+    border-radius: 100%;
+    border: 1px solid black;
+    position: absolute;
+    left: 48%;
+    top: -32.5px;
+}
+#play-button:hover {
+    width: 68px;
+    height: 68px;
+    transition: 0.1s ease-out;
+    cursor: pointer;
+}
+.new-container {
+    width: 100%;
+    display: flex;
+}
+.side-column {
+    width: 25%;
+}
+.mid-column {
+    width: 50%;
+    text-align: left;
+}
+.player-container {
+    display: flex;
+    border: 1px solid black;
+    height: 8vw;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2.5rem 0 3rem;
+}
+.player-img-container {
+    width: 11.1vw;
+    height: 11.1vw;
+}
+.player-container img {
+    display: block;
+    border: 1px solid black;
+    margin-left: 10%;
+}
+.player-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    font-size: 12px;
+}
+.player-links * {
+    height: 100%;
+    padding: 0 10px 0 10px;
+    border-left: 1px dotted black;
+    border-bottom: 1px dotted black;
+}
+.player-links button {
+    background: white;
+    outline: none;
+    border-top: none;
+    border-right: none;
+}
+.artist-profile {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    margin: auto;
+    position: relative;
+    top: 30vh;
+}
+.artist-profile img {
+    width: 9.6vw;
+    height: 9.6vw;
+    border-radius: 100%;
+}
+.album-merch {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    margin: auto;
+    font-size: 0.75rem;
+    position: relative;
+    top: 22vh;
+}
+.merch-photos {
+    display: flex;
+    justify-content: space-between;
+}
+.merch-photos img {
+    width: 3vw;
+    height: 3vw;
+}
+.article-end {
+    width: 17px;
+    height: 11px;
+    background: url("./images/bandcamp/bc-logo-end.png") no-repeat;
+    background-size: 100%;
+    margin: auto;
+    margin-top: 10vh;
+}
+.tag {
+    color: gray;
+    background-color: white;
+    border: 1px solid gray;
+    border-radius: 2rem;
+    padding: 2px 15px 2px 15px;
+    display: block;
+    margin: auto;
+    margin-top: 10vh;
+    width: fit-content;
+}
+.read-more {
+    text-align: center;
+    margin-top: 7vh;
+}
+.stories {
+    width: 75%;
+    margin: auto;
+}
+.stories-container {
+    justify-content: space-between;
+    display: flex;
+}
+.stories-container article {
+    width: 32%;
+    text-align: left;
+}
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 30%;
+}
+#latest article {
+    width: 15%;
+}
+#radio {
+    width: 55%;
+    margin: auto;
+    margin-bottom: 16vh;
+}
+#radio .header {
+    width: 80%;
+}
+#radio .img-container {
+    position: relative;
+}
+#radio .footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #2c2c2c;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
+footer {
+    display: flex;
+    justify-content: space-between;
+    background-color: #848484;
+    padding: 6px 0 6px 0;
+    font-size: 0.8125rem;
+    color: white;
+}
+footer span a {
+    margin: 10px;
 }
