--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
 }
 body {
     margin: 0;
-    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
-    width: 100vw;
-    height: 100vh;
+    font-family: sans-serif;
+    font-weight:lighter;
+    width: 100%;
+    height: 100%;
     font-size: 17px;
+    overflow-x: hidden;
+    background: linear-gradient( 0deg, #e9e8e8 0%, #e9e8e8 38%, #ffffff 42%);
 }
 nav {
     display: flex;
@@ -15,11 +18,26 @@ nav {
     height: 53px;
     padding: 0 16px;
 }
+h1 {
+    font-size: 3rem;
+    color: black;
+}
+h3 {
+    font-size: 3rem;
+    font-style: italic;
+    color: #e9e8e8;
+    text-shadow: 0px 1px black,
+                 0px -1px black,
+                 1px 0px black,
+                 0px 1px black;
+    
+}
 a {
     text-decoration: none;
+    color: gray;
 }
-a:visited {
-    color: inherit;
+a:hover {
+    text-decoration: underline;
 }
 .nav-logo {
     width: 108px;
@@ -48,6 +66,14 @@ img {
 .menu-nav {
     justify-content: space-between;
 }
+#search-button {
+    border: none;
+    cursor: pointer;
+    width: 15px;
+    height: 15px;
+    background: url("./images/bandcamp/search-icon.jpg") white no-repeat;
+    background-size: 100%;
+}
 .daily-link {
     color: gray;
 }
@@ -62,12 +88,33 @@ img {
     height: 43px;
     padding-left: 3vw;
     padding-right: 3vw;
+    margin-bottom: 5vh;
 }
 .strong {
     font-weight: bold;
 }
 article {
     text-align: center;
+}
+.article-header {
+    color: gray;
+}
+.link1 {
+    font-weight: bold;
+}
+.link1:hover {
+    text-decoration: underline;
+}
+.link2 {
+    color: #1da0c3;
+}
+.link2:visited {
+    color: #1da0c3;
+}
+.link3 {
+    color: black;
+    font-style: italic;
+    font-weight: bold;
 }
 .daily-links-container {
     padding-right: 5vw;
@@ -105,6 +152,10 @@ article {
     width: 50%;
     text-align: left;
 }
+#main-article p{
+    margin: 0.75rem 0;
+    line-height: 1.76rem;    
+}
 .player-container {
     display: flex;
     border: 1px solid black;
@@ -130,16 +181,25 @@ article {
     font-size: 12px;
 }
 .player-links * {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     height: 100%;
     padding: 0 10px 0 10px;
     border-left: 1px dotted black;
     border-bottom: 1px dotted black;
+    color: black;
+    font-weight: bold;
+    font-size: 10px;
 }
 .player-links button {
-    background: white;
+    background: url("./images/bandcamp/heart-icon.png") white no-repeat;
+    background-size: 20%;
+    background-position: 35px 7px;
     outline: none;
     border-top: none;
     border-right: none;
+    cursor: pointer;
 }
 .artist-profile {
     display: flex;
@@ -148,11 +208,28 @@ article {
     margin: auto;
     position: relative;
     top: 30vh;
+    font-size: 0.75rem;
+}
+.artist-profile * {
+    margin-top: 5px;
 }
 .artist-profile img {
     width: 9.6vw;
     height: 9.6vw;
     border-radius: 100%;
+}
+.artist-profile a {
+    color: black;
+}
+.artist-profile span {
+    color: gray;
+}
+.artist-profile button {
+    border: none;
+    width: fit-content;
+    margin: auto;
+    margin-top: 5px;
+    padding: 8px;
 }
 .album-merch {
     display: flex;
@@ -190,6 +267,11 @@ article {
     margin-top: 10vh;
     width: fit-content;
 }
+.tag:hover {
+    color: black;
+    border-color: black;
+    text-decoration: none;
+}
 .read-more {
     text-align: center;
     margin-top: 7vh;
@@ -197,6 +279,10 @@ article {
 .stories {
     width: 75%;
     margin: auto;
+}
+.stories-footer {
+    font-size: 0.75rem;
+    color: gray;
 }
 .stories-container {
     justify-content: space-between;
@@ -206,22 +292,30 @@ article {
     width: 32%;
     text-align: left;
 }
+.link4 {
+    color: black;
+    font-size: 1.1rem;
+}
 .header {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-between;
     width: 30%;
 }
 #latest article {
     width: 15%;
 }
+#latest .stories-container a {
+    font-size: 0.825rem;
+}
 #radio {
-    width: 55%;
+    width: 50%;
     margin: auto;
     margin-bottom: 16vh;
 }
 #radio .header {
     width: 80%;
+    margin: auto;
 }
 #radio .img-container {
     position: relative;
@@ -229,11 +323,18 @@ article {
 #radio .footer {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: #2c2c2c;
     position: absolute;
     bottom: 0px;
     width: 100%;
+    color: white;
+    padding: 10px 60px 10px 60px;
+}
+#radio .footer a {
+    color: white;
+    border: 1px solid white;
+    padding: 15px;
 }
 footer {
     display: flex;
@@ -243,6 +344,13 @@ footer {
     font-size: 0.8125rem;
     color: white;
 }
+footer a {
+    color: white;
+}
+footer img {
+    width: 96px;
+    margin-left: 10px;
+}
 footer span a {
-    margin: 10px;
+    margin: 5px;
 }
