clean up html and organize folders

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ img {
     cursor: pointer;
     width: 15px;
     height: 15px;
-    background: url("./images/bandcamp/search-icon.jpg") white no-repeat;
+    background: url("../images/bandcamp/search-icon.jpg") white no-repeat;
     background-size: 100%;
 }
 .daily-link {
@@ -136,7 +136,7 @@ article {
 #play-button {
     width: 65px;
     height: 65px;
-    background: url("./images/bandcamp/play-icon.png") white no-repeat;
+    background: url("../images/bandcamp/play-icon.png") white no-repeat;
     background-size: 100%;
     border-radius: 100%;
     border: 1px solid black;
@@ -215,7 +215,7 @@ article {
     font-size: 10px;
 }
 .player-links button {
-    background: url("./images/bandcamp/heart-icon.png") white no-repeat;
+    background: url("../images/bandcamp/heart-icon.png") white no-repeat;
     background-size: 20%;
     background-position: 35px 7px;
     outline: none;
@@ -286,7 +286,7 @@ article {
 .article-end {
     width: 17px;
     height: 11px;
-    background: url("./images/bandcamp/bc-logo-end.png") no-repeat;
+    background: url("../images/bandcamp/bc-logo-end.png") no-repeat;
     background-size: 100%;
     margin: auto;
     margin-top: 10vh;
