--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,24 @@
 }
 body {
     margin: 0;
-    font-family: sans-serif;
-    font-weight:lighter;
     width: 100%;
     height: 100%;
-    font-size: 17px;
-    overflow-x: hidden;
     background: linear-gradient( 0deg, #e9e8e8 0%, #e9e8e8 22%, #ffffff 23%);
+    font-family: sans-serif;
+    font-size: 17px;
+    font-weight:lighter;
+    overflow-x: hidden;
 }
 nav {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #f3f3f3;
     height: 53px;
     padding: 0 16px;
+    border-bottom: 1px solid #f3f3f3;
 }
 h1 {
     font-size: 3rem;
-    color: black;
+    color: #000000;
 }
 h2 {
     font-size: 1rem;
@@ -29,15 +29,15 @@ h3 {
     font-size: 3rem;
     font-style: italic;
     color: #e9e8e8;
-    text-shadow: 0px 1px black,
-                 0px -1px black,
-                 1px 0px black,
-                 0px 1px black;
+    text-shadow: 0px 1px #000000,
+                 0px -1px #000000,
+                 1px 0px #000000,
+                 0px 1px #000000;
     
 }
 a {
     text-decoration: none;
-    color: gray;
+    color: #808080;
 }
 a:hover {
     text-decoration: underline;
@@ -47,10 +47,10 @@ a:hover {
     height: 17px;
 }
 ul {
-    list-style: none;
     display: flex;
     align-items: center;
     height: 100%;
+    list-style: none;
 }
 ol {
     width: 50%;
@@ -58,15 +58,15 @@ ol {
     text-align: left;
 }
 .nav-button {
-    padding: 0 10px 0 10px;
-    height: 100%;
     display: flex;
     align-items: center;
+    height: 100%;
+    padding: 0 10px 0 10px;
 }
 .nav-button:hover {
+    height: 53px;
     background-color: #f3f3f3;
     cursor: pointer;
-    height: 53px;
 }
 img {
     max-width: 100%;
@@ -75,28 +75,28 @@ img {
     justify-content: space-between;
 }
 #search-button {
-    border: none;
-    cursor: pointer;
     width: 15px;
     height: 15px;
-    background: url("../images/bandcamp/search-icon.jpg") white no-repeat;
+    background: url("../images/bandcamp/search-icon.jpg") #ffffff no-repeat;
     background-size: 100%;
+    border: none;
+    cursor: pointer;
 }
 .daily-link {
-    color: gray;
+    color: #808080;
 }
 .daily-link:hover {
     text-decoration: underline;
-    color: royalblue;
+    color: #1da0c3;
 }
 .daily-nav {
-    color: gray;
-    font-size: 0.8125rem;
     justify-content: space-around;
     height: 43px;
+    margin-bottom: 5vh;
     padding-left: 3vw;
     padding-right: 3vw;
-    margin-bottom: 5vh;
+    font-size: 0.8125rem;
+    color: #808080;
 }
 .strong {
     font-weight: bold;
@@ -105,7 +105,7 @@ article {
     text-align: center;
 }
 .article-header {
-    color: gray;
+    color: #808080;
 }
 .link1 {
     font-weight: bold;
@@ -120,7 +120,7 @@ article {
     color: #1da0c3;
 }
 .link3 {
-    color: black;
+    color: #000000;
     font-style: italic;
     font-weight: bold;
     font-size: 0.9rem;
@@ -130,29 +130,29 @@ article {
 }
 .cover-container {
     position: relative;
-    margin-top: 70px;
     width: 100%;
+    margin-top: 70px;
 }
 #play-button {
     width: 65px;
     height: 65px;
-    background: url("../images/bandcamp/play-icon.png") white no-repeat;
-    background-size: 100%;
-    border-radius: 100%;
-    border: 1px solid black;
     position: absolute;
     left: 48%;
     top: -32.5px;
+    border: 1px solid #000000;
+    border-radius: 100%;
+    background: url("../images/bandcamp/play-icon.png") #ffffff no-repeat;
+    background-size: 100%;
 }
 #play-button:hover {
     width: 68px;
     height: 68px;
-    transition: 0.1s ease-out;
     cursor: pointer;
+    transition: 0.1s ease-out;
 }
 .new-container {
-    width: 100%;
     display: flex;
+    width: 100%;
 }
 .side-column {
     width: 25%;
@@ -162,29 +162,28 @@ article {
     text-align: left;
 }
 #main-article p, h2{
-    margin: 0.75rem 0;
-    line-height: 1.76rem;
     width: 50%;
+    margin: 0.75rem 0;
     margin: auto;
+    line-height: 1.76rem;    
 }
 #main-article section{
-    text-align: left;
     margin-top: 3vh;
+    text-align: left;
 }
 .profile-player-merch {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: auto;
     margin: 0 0 3rem 0;
 }
 .player-container {
     display: flex;
-    border: 1px solid black;
-    height: 8vw;
-    width: 50%;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    width: 50%;
+    height: 8vw;
+    border: 1px solid #000000;
 }
 .player-img-container {
     width: 11.1vw;
@@ -192,8 +191,8 @@ article {
 }
 .player-container img {
     display: block;
-    border: 1px solid black;
     margin-left: 10%;
+    border: 1px solid #000000;
 }
 .player-links {
     display: flex;
@@ -204,31 +203,31 @@ article {
 }
 .player-links * {
     display: flex;
-    align-items: center;
     justify-content: space-evenly;
+    align-items: center;
     height: 100%;
     padding: 0 10px 0 10px;
-    border-left: 1px dotted black;
-    border-bottom: 1px dotted black;
-    color: black;
+    border-left: 1px dotted #000000;
+    border-bottom: 1px dotted #000000;
     font-weight: bold;
     font-size: 10px;
+    color: #000000;
 }
 .player-links button {
-    background: url("../images/bandcamp/heart-icon.png") white no-repeat;
+    border-top: none;
+    border-right: none;
+    background: url("../images/bandcamp/heart-icon.png") #ffffff no-repeat;
     background-size: 20%;
     background-position: 35px 7px;
     outline: none;
-    border-top: none;
-    border-right: none;
     cursor: pointer;
 }
 .artist-profile {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 0.75rem;
     width: 15vw;
+    font-size: 0.75rem;
 }
 .artist-profile * {
     margin-top: 5px;
@@ -239,39 +238,39 @@ article {
     border-radius: 100%;
 }
 .artist-profile img:hover {
-    border: 1px solid black;
+    border: 1px solid #000000;
 }
 .artist-profile a {
-    color: black;
+    color: #000000;
 }
 .artist-profile span {
-    color: gray;
+    color: #808080;
 }
 .artist-profile button {
-    border: none;
     width: fit-content;
     margin: auto;
     margin-top: 5px;
     padding: 8px;
+    border: none;
 }
 .artist-profile button:hover {
-    cursor: pointer;
     color: #1da0c3;
+    cursor: pointer;
 }
 .album-merch {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 0.75rem;
     width: 15vw;
+    font-size: 0.75rem;
     text-align:center
 }
 .album-merch img {
     width: 100%;
 }
 .album-merch img:hover {
+    border: 1px solid #000000;
     cursor: pointer;
-    border: 1px solid black;
 }
 .merch-photos {
     display: flex;
@@ -286,56 +285,56 @@ article {
 .article-end {
     width: 17px;
     height: 11px;
-    background: url("../images/bandcamp/bc-logo-end.png") no-repeat;
-    background-size: 100%;
     margin: auto;
     margin-top: 10vh;
+    background: url("../images/bandcamp/bc-logo-end.png") no-repeat;
+    background-size: 100%;
 }
 .tag {
-    color: gray;
-    background-color: white;
-    border: 1px solid gray;
-    border-radius: 2rem;
-    padding: 2px 15px 2px 15px;
     display: block;
+    width: fit-content;
+    padding: 2px 15px 2px 15px;
     margin: auto;
     margin-top: 10vh;
     margin-bottom: 10vh;
-    width: fit-content;
+    border: 1px solid #848484;
+    border-radius: 2rem;
+    color: #848484;
+    background-color: white;
 }
 .tag:hover {
-    color: black;
-    border-color: black;
+    border-color: #000000;
+    color: #000000;
     text-decoration: none;
 }
 .read-more {
-    text-align: center !important;
     margin-top: 7vh;
+    text-align: center !important;
 }
 .stories {
     width: 75%;
     margin: auto;
 }
 .stories-footer {
+    color: #848484;
     font-size: 0.75rem;
-    color: gray;
 }
 .stories-container {
-    justify-content: space-between;
     display: flex;
+    justify-content: space-between;
 }
 .stories-container article {
     width: 32%;
     text-align: left;
 }
 .link4 {
-    color: black;
+    color: #000000;
     font-size: 1.1rem;
 }
 .header {
     display: flex;
-    align-items: baseline;
     justify-content: space-between;
+    align-items: baseline;
     width: 30%;
 }
 #latest article {
@@ -358,30 +357,30 @@ article {
 }
 #radio .footer {
     display: flex;
-    align-items: center;
     justify-content: space-evenly;
-    background-color: #2c2c2c;
+    align-items: center;
     position: absolute;
     bottom: 0px;
     width: 100%;
-    color: white;
     padding: 10px 60px 10px 60px;
+    color: #ffffff;
+    background-color: #2c2c2c;
 }
 #radio .footer a {
-    color: white;
     border: 1px solid white;
     padding: 15px;
+    color: #ffffff;
 }
 footer {
     display: flex;
     justify-content: space-between;
-    background-color: #848484;
     padding: 6px 0 6px 0;
+    background-color: #848484;
+    color: #ffffff;
     font-size: 0.8125rem;
-    color: white;
 }
 footer a {
-    color: white;
+    color: #ffffff;
 }
 footer img {
     width: 96px;
